# aerichor

./: .gitignore  README.md  improvements.md  pyproject.toml
notebooks/: pace.ipynb
src/aerichor/: __init__.py  dataframe.py  utils.py
src/aerichor/ground/: aqs.py
src/aerichor/satellite/: base.py  pace.py
tests/: test_df.py  test_pace.py  test_utils.py
